apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: homeassistant-data-claim
      securityContext:
        runAsUser: 3218
        runAsGroup: 3218
      containers:
      - name: app
        image: ghcr.io/home-assistant/home-assistant:stable@sha256:1b64d38f38d922bf9d59336451fd6453e1d614f934456af4ee3d2a51061be3a4
        volumeMounts:
        - name: data
          mountPath: /config
        ports:
        - containerPort: 8123
        startupProbe:
          httpGet:
            path: /
            port: 8123
          failureThreshold: 12  # 12 * 10s = 2 minutes startup leeway
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 10
          periodSeconds: 30
