apps/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-web
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: homeassistant
  ports:
  - port: 80
    targetPort: 8123
